# TodoApp

./: README.md  alembic.ini  database.py  main.py  models.py  pyproject.toml  todosApp.db
alembic/: env.py
alembic/versions/: 3780057c6fdd_create_phone_number_for_user_column.py
routers/: admin.py  auth.py  todos.py  users.py
templates/: home.html  layout.html  login.html
test/: test_admin.py  test_example.py  test_main.py  test_todos.py  test_users.py  utils.py
